--- a/arch/arm64/configs/lineageos_kenzo_defconfig
+++ b/arch/arm64/configs/lineageos_kenzo_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Escrima-X23-Kamui-LightningBlade-PurpleLightning"
+CONFIG_LOCALVERSION="-friday-1.0"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
